--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -57,8 +57,8 @@ sorting=ynt
 
 \fi
 \newcommand{\rokod}{2024}
-\newcommand{\vedouci}{Mgr. Leo Schlattauer Ph.D.}
-\newcommand{\konzultant}{doc. RNDr. Jiří Pechoušek, Ph.D.}
+\newcommand{\vedouci}{Mgr. Aleš Stejskal Ph.D.}
+\newcommand{\konzultant}{Mgr. Leo Schlattauer Ph.D.}
 
 \newcommand{\abstrakt}{%
 Holy moly kihsdlngleiodnglkdngdsrg}
@@ -232,7 +232,7 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 % -----------------------------------------------
 % Kapitoly lze ukládat do zvláštních souborů...
 % -----------------------------------------------
-\input{Chapter1}
+
 % -----------------------------------------------
 \input{gammaRays}
 
@@ -241,6 +241,8 @@ In~Olomouc~\today   \hfill\parbox[t]{6cm}{\centering\null\dotfill\\\student}
 \input{Semiconductors}
 
 \input{pulseAnalysis}
+
+\input{Mossbauer}
 % -----------------------------------------------
 % Závěr
 % -----------------------------------------------
