--- a/Mossbauer.tex
+++ b/Mossbauer.tex
@@ -3,20 +3,50 @@
 % -----------------------------------------------
 
 % -----------------------------------------------
-\chapter{Mössbauer effect}
+\chapter{Mössbauer effect and spectroscopy}
 % -----------------------------------------------
-Mössbauer effect is a physical effect, which can under certain circumstances occur on atomic nuclei. It consists of recoilless resonance emission/absorption of gamma photons by nuclei of source/absorber with discrete nuclear energy levels.  
+Mössbauer effect is a physical effect, which can under certain circumstances occur on atomic nuclei. It consists of recoilless resonance emission/absorption of gamma photons by nuclei of source/absorber with discrete nuclear energy levels. This effect has a wide field of application - mainly the Mössbauer spectroscopy, which is a nuclear experimental technique and a special type of gamma spectroscopy, which uses the appropriate nuclei in studied sample as sonds of local electric and magnetic fields. 
+
+\par
+This technique is capable of providing many unique information in material research, geology, chemistry and biology - study of phase and chemical composition of solid materials such as steel, study of local magnetic fields and spin states, in-situ measurements of phase transitions. The main disadvantage of this technique is the fact that there is not an appropriate radiation source for many isotopes. The mayor significance has iron and its isotope $^{57}$Fe with possible radiation source $^{57}$Co (which decays into an excited state of $^{57}$Fe), which allows Mössbauer spectroscopy to be employed on many fields, including the steel industry.
 
 % -----------------------------------------------
 \section{Physical concept}
-It is well-known fact, that the atomic nuclei are quantum systems with discrete energy levels (analogous to the energy levels of electron shell), thus upon deexcitation or excitation they absorb/emit gamma photon with energy equal to the difference between the levels. However, this energy may be altered - due to the  momentum conservation law, some part of the gamma photon energy is transferred to the  kinetic energy of nucleus, crystal as whole body or is possibly transformed into lattice vibrations (phonons). Due to this fact, the emission and absorption energy spectra may be different and without any overlaps, which prevents the resonance effects from happening.
+In previous chapters was mentioned, that the atomic nuclei are quantum systems with discrete energy levels (analogous to the energy levels of electron shell), thus upon deexcitation or excitation they emit/absorb gamma photon with energy equal to the difference between the levels. For the free, stationary nucleus, the emitted/absorbed energy spectra follow the shape of Lorentzian curve. 
 
+\par
+However, this energy may be altered - due to the  momentum conservation law, some part of the gamma photon energy is transferred to the  kinetic energy of nucleus, crystal as whole body or is transformed into lattice vibrations (phonons). Due to this fact, the emission and absorption energy spectra may be different and without any overlaps, which prevents the resonance effects from happening.
+
+\par
+In the case of free, stationary nuclei, momentum and energy transfers are so high, that the emission and absorption spectra are shifted to different directions by large energetic values, which makes the resonance absorption impossible to observe. However, the nucleus bounded into the crystal lattice is a different case - the crystal as whole body will absorb the momentum. If we consider, that the entire crystal has much larger mass than the nucleus, the energy transfer into crystal's kinetic energy will be very small - the gamma photon energy remains nearly unaltered. Thus this can be considered as recoilless emission/absorption and the energy spectra have overlap, which makes the resonance absorption (Mössbauer effect) observable.
+\par
+It also worth mentioning, that there is also a third case - the free nuclei in thermal motion. The velocity of nuclei is guided by Maxwell's statistics and the spectra become widened by Gaussian shape. At higher temperatures, this effect may result into spectra overlap and makes the resonance absorption observable. However, this technique is not much developed yet and has only a little field of application.
 % -----------------------------------------------
 
-\section{Mössbauer Fe$^{57}$ spectroscopy}
+\section{Mössbauer spectroscopy}
+
+ - pertubation teory, what results into the fact, that every phase or chemical constitution has its own Mössbauer spectrum.
 
 
-This thesis is mainly devoted to the application of semiconductor detectors for detection of the 14.4 keV gamma photons.
+\subsection{Interaction of nuclei with local fields}
+The main properties of nucleus which induces the interactions with local electric and magnetic fields are: atomic number $Z$, quadrupole momentum $Q$ and its spin $I$ along with its projections.
 
-It is also necessary to consider, that the Fe$^{57}$ isotope have relative abundance only $2.21 \%$ \cite{compounds}. Although this fact, the spectra are still be measured with very respectable precision and efficiency, which makes the Mössbauer spectroscopy very sensitive measurement method.
+
+\subsection*{•}
+
+\section{$^{57}$Fe spectroscopy}
+
+One of the isotopes, on which we are capable to observe a Mössbauer effect is $^{57}$Fe.
+
+\begin{itemize}
+
+\item Source of 14.4 keV gamma - $^{57}$Co radioctive nuclei built-in crystal lattice (mostly in a rhodium matrice).
+\item Transducer for doppler modulation with PID regulation for precise velocity and energy control. 
+\item detector of transmitted/backscattered gamma radiation,conversion electrons or RTG along with evaluation electronics including amplifiers, MCA's etc.
+
+\end{itemize}
+
+This thesis is mainly devoted to the application of semiconductor detectors for detection of the 14.4 keV gamma photons in transmission geometry.
+
+It is also necessary to consider, that the $^{57}$Fe isotope have relative abundance only $2.21 \%$ \cite{compounds}. Although this fact, the spectra are still measured with very respectable precision and efficiency, which makes the Mössbauer spectroscopy very sensitive measurement method.
 % %%%%%%%%%%%%%%%%%%%%%%%% End of file %%%%%%%%%%%%%%%%%%%%%%%%
