--- a/bp_dp.tex
+++ b/bp_dp.tex
@@ -197,7 +197,7 @@ Deadline:& April~\rokod
 
 \noindent
 I hereby declare that I elaborated this bachelor thesis independently under the supervision 
-of Mgr. Leo Schlattauer Ph.D.,  using  only  information  sources  referred  in  the  Literature chapter. \\
+of Mgr. Aleš Stejskal Ph.D.,  using  only  information  sources  referred  in  the  Literature chapter. \\
 {}\vspace{3ex}
 
 \noindent
