--- a/citations.bib
+++ b/citations.bib
@@ -8,4 +8,37 @@ language     = {english}
 
 
 }
+@PhdThesis{NOVAK2016thesis,
 
+	AUTHOR = "NOVÁK, Petr",
+
+	TITLE = "Mössbauerův spektrometr s časovým rozlišením detekce fotonů záření gama - vývoj a aplikace [online]",
+
+	YEAR = "2016 [cit. 2023-11-06]",
+
+	TYPE = "Doctoral theses, Dissertations", 
+
+	SCHOOL = "Palacký University Olomouc, Faculty of ScienceOlomouc",
+
+}
+
+@MastersThesis{STEJSKAL2019thesis,
+
+	AUTHOR = "STEJSKAL, Aleš",
+
+	TITLE = "Konstrukce duálního Mössbauerova spektrometru a adaptace pro dynamická měření [online]",
+
+	YEAR = "2019 [cit. 2023-11-06]",
+
+	TYPE = "Master's thesis", 
+
+	SCHOOL = "Palacký University Olomouc, Faculty of ScienceOlomouc",
+
+}
+
+@BOOK{Leo1987-wy, title = "Techniques for nuclear and particle physics experiments", author = "Leo, William R",}
+
+@article{https://doi.org/10.1029/2003JE002138, author = {Klingelhöfer, G. and Morris, R. V. and Bernhardt, B. and Rodionov, D. and de Souza Jr., P. A. and Squyres, S. W. and Foh, J. and Kankeleit, E. and Bonnes, U. and Gellert, R. and Schröder, C. and Linkin, S. and Evlanov, E. and Zubkov, B. and Prilutski, O.}, title = {Athena MIMOS II Mössbauer spectrometer investigation}, journal = {Journal of Geophysical Research: Planets}, volume = {108}, number = {E12}, pages = {}, keywords = {Mössbauer spectroscopy, iron mineralogy, Mars, weathering, instrumentation, MIMOS II}, doi = {https://doi.org/10.1029/2003JE002138}, 
+}
+
+@BOOK{Gilmore2008-jw, title = "Practical gamma-ray spectroscopy", author = "Gilmore, Gordon", publisher = "Wiley-Blackwell", edition = 2, month = apr, year = 2008, address = "Hoboken, NJ", language = "en" }
