--- a/pulseAnalysis.tex
+++ b/pulseAnalysis.tex
@@ -3,10 +3,18 @@
 % -----------------------------------------------
 
 % -----------------------------------------------
-\chapter{Detector pulse analysis}
+\chapter{Electronics for signal readout and analysis}
 % -----------------------------------------------
+\section{Diode detector connection and support electronics}
+\subsection{High voltage source}
+\subsection{Shielding and grounding}
+\subsection{Cooling}
+To reduce thermal noise and achieve better SNR it is necessary to cool the detector.
 
-
+\section{Spectrometric chain}
+\subsection{Pre-amplification}
+\subsection{Amplification and shaping}
+\subsection{Pulse-height measurement and spectra accumulation}
 
 
 
