--- a/Semiconductors.tex
+++ b/Semiconductors.tex
@@ -3,12 +3,31 @@
 % -----------------------------------------------
 
 % -----------------------------------------------
-\chapter{Semiconductor Detectors}
+\chapter{Semiconductor detectors with p-n junction}
 % -----------------------------------------------
+The semiconductor structures has unique properties, which make them usable not only for a particle detection. There are many types of semiconductor detectors - conventional detectors of light intensity with spectral range from infrared to UV - photoresistors and photodiodes, low intensities and single photons detectors - avalanche photodiodes (APDs), for imagining - CCD and CMOS cameras, x-ray, gamma and other particles rates and energy detectors - special photodiodes, for particle position and energy measurements - drift and strip detectors. The essential role for gamma spectroscopy have the p-n junction detectors - detection diodes capable of capturing high-energy gamma photons with sufficient energy resolution and efficiency.
 
+
+\par
+If we want to detect a particle or photon, is has to interact with the detector material - in semiconductor the creation of electron-hole pairs is observed. This could be achieved by interaction mechanisms described in previous chapters, which differ for every type of particle and energy.
+
+The main of purpose of semiconductor material as a detector, is to 
+
+The  
 
 \section{Principle and parameters}
+The basic difference between conductors, insulators and semiconductors is the valence and conduction band structure.  It is necessary to say, that the semiconductor materials have usually form of crystal of diamond (two FCC lattices bounded together.) For the  
+ 
+ 
+
+\section{Detection}
+
+\section{Main noise sources and limitations}
+
 \section{Construction scheme of Instruments for gamma detection based on semiconductors}
+
+
+
 
 
 \subsection{XR-100CdTe X-Ray and Gamma Ray Detector}
@@ -17,6 +36,9 @@
 
 
 \section{Available semiconductor sensors}
+To detect Mössbauer 14.4 keV gammas our primary choice was $Si$ due to the high detection efficiency under 25 keV. 
+
+
 
 \section{Hamamatsu detectors}
 
